refactor: clean code

--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -8,42 +8,67 @@
     android:layout_marginBottom="4dp"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?selectableItemBackground">
+    app:cardBackgroundColor="@color/app_item_card_background">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!--suppress AndroidLintContentDescription -->
-        <com.example.xyzreader.ui.DynamicHeightNetworkImageView
-            android:id="@+id/thumbnail"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@color/photo_placeholder" />
 
         <TextView
-            android:id="@+id/article_title"
-            style="@style/TextAppearance.AppCompat.Subhead"
+            android:id="@+id/article_date"
+            style="@style/TextAppearance.AppCompat.Body1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="16dp"
-            android:paddingTop="16dp"
-            android:paddingRight="16dp"
-            android:paddingBottom="4dp"
-            android:textColor="@color/ltgray"
-            android:ellipsize="end"
-            android:maxLines="4" />
+            android:paddingTop="8dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:paddingBottom="8dp"
+            android:textColor="#7e7e7e"
+            android:gravity="right"
+            android:maxLines="1"
+            android:text="Jan 1, 1908"
+            android:ellipsize="end" />
+
+        <!--suppress AndroidLintContentDescription -->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <com.example.xyzreader.ui.DynamicHeightNetworkImageView
+            android:id="@+id/thumbnail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
+            android:background="@color/photo_placeholder" />
+
+            <TextView
+                android:id="@+id/article_title"
+                style="@style/TextAppearance.AppCompat.Subhead"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:paddingLeft="5dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp"
+                android:paddingBottom="4dp"
+                android:background="#50000000"
+                android:textColor="@color/ltgray"
+                android:ellipsize="end"
+                android:maxLines="2" />
+    </RelativeLayout>
 
         <TextView
             android:id="@+id/article_subtitle"
             style="@style/TextAppearance.AppCompat.Body1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingBottom="16dp"
-            android:textColor="#6000"
+            android:paddingTop="@dimen/article_subtitle_padding"
+            android:paddingLeft="@dimen/article_subtitle_padding"
+            android:paddingRight="@dimen/article_subtitle_padding"
+            android:paddingBottom="@dimen/article_subtitle_padding"
+            android:textColor="#bebebe"
             android:maxLines="2"
             android:ellipsize="end" />
     </LinearLayout>
