--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -16,15 +16,19 @@
 -->
 
 <resources>
+
+    <color name="colorTextPrimary">#414141</color>
+    <color name="colorTextPrimaryDark">#212121</color>
+    <color name="colorAccent">#f60057</color>
+
+    <color name="theme_primary">#04561A</color>
+    <color name="theme_primary_dark">#04561A</color>
+
     <color name="photo_placeholder">#ccc</color>
 
     <color name="app_background">#303030</color>
     <color name="app_item_card_background">#202020</color>
 
-    <color name="colorTextPrimary">#414141</color>
-    <color name="colorTextPrimaryDark">#212121</color>
-    <color name="theme_primary">#04561A</color>
-    <color name="theme_primary_dark">#04561A</color>
     <color name="theme_accent">#04561A</color>
     <color name="ltgray">#ffe0e0e0</color>
     <color name="title_text_color">#eeeced</color>
