refactor: load images effisciently

--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -17,6 +17,7 @@
             app:theme="@style/AppTheme.PopupOverlay"
             android:layout_marginLeft="@dimen/list_toolbar_side_margin"
             android:layout_marginRight="@dimen/list_toolbar_side_margin"
+            android:elevation="2dp"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize">
 
