--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- detail -->
-    <dimen name="detail_title_text_size">32sp</dimen>
+    <dimen name="detail_title_text_size">28sp</dimen>
     <dimen name="detail_body_text_size">20sp</dimen>
     <item name="detail_body_line_spacing_multiplier" format="float" type="fraction">1.25</item>
 
@@ -9,5 +9,7 @@
     <dimen name="fab_margin">24dp</dimen>
     <dimen name="article_image_height">100dp</dimen>
     <dimen name="article_subtitle_padding">8dp</dimen>
+    <dimen name="fab_share_margin">24dp</dimen>
+    <dimen name="list_toolbar_top_margin">24dp</dimen>
 
 </resources>
