--- a/XYZReader/src/main/res/values/macro_layout.xml
+++ b/XYZReader/src/main/res/values/macro_layout.xml
@@ -11,6 +11,7 @@
     <dimen name="detail_inner_horiz_margin">16dp</dimen>
     <dimen name="detail_card_max_width">10000dp</dimen> <!-- force match_parent -->
     <dimen name="detail_metabar_vert_padding">16dp</dimen>
+    <dimen name="detail_metabar_vert_top_padding">20dp</dimen>
     <dimen name="detail_metabar_title_bottom_padding">4dp</dimen>
     <dimen name="detail_body_top_margin">16dp</dimen>
     <dimen name="detail_body_bottom_margin">88dp</dimen>
